--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple javascript library to add easter eggs to web pages.",
   "main": "Gruntfile.js",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": ">=1.3.0"
     "grunt-contrib-uglify": "^0.9.1"
   },
   "scripts": {
